# Stardust

./: .gitignore  README.md  bench.js  build  deps.ts  imports.json  install_bpf.sh  sauron.py  sdb.ts  sdh.ts  sdi.ts  stardust.ts  stest.py  test.ts  tsconfig.json  util.ts
.archive/: bench.js  opensnoop.py
.archive/libpython/: ffi.ts  python.ts  symbols.ts  util.ts
.archive/opensnoop/: open.cpp
.archive/opensnoop/src/: main.rs  opensnoop.c
.archive/sdsnoop/: build.sh  libsdsnoop.js  libsdsnoop.ts
Stardust/: manifest.json  options.js  stardust.js
local/: ext.cpp  ext.h  install.sh  opensnoop.bt  opensnoop.py  package-lock.json  package.json  temp.txt  test.js  test.ts
local/include/linux/: _kconfig.h
opensnoop/: Cargo.toml  stest.c
opensnoop/src/: main.rs  opensnoop.c
sdb/: sdb.db  sdb.ddb  sdb.sql  sdb.ts
sds/: index.mjs  index.mts  package-lock.json  package.json  router.ts  sds.min.mjs  sds.ts
sds/public/: terminal.html
sds/src/: index.mts  terminal.mts
sds/src/public/: terminal.html
sds/www/: text.html  x.js
sds/www/rand/: #[n].js
sdsnoop/: Cargo.toml  bindings.json  build.sh  libsdsnoop.js  libsdsnoop.ts
sdsnoop/src/: lib.rs
server/: run  stardust.js  test.html
src/: manifest.json  options.html  options.tsx  stardust.less  stardust.ts  stardust.tsx
test/: index.js  index.ts  out.c
