[package]
name = "opensnoop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcc="0.0.34"
byteorder = "1.3.1"
failure = "0.1.5"
libc = "0.2.55"
regex = "1.3.1"

clap = "2.33.0"
ctrlc = "3.1.3"
lazy_static = "1.3.0"